--- a/templates/admin/micro_credential/edit.html.twig
+++ b/templates/admin/micro_credential/edit.html.twig
@@ -197,17 +197,42 @@
                 </div>
             </div>
 
+
+
             <!-- Main Form Area -->
             <div class="col-lg-8 col-xl-9">
                 <div class="main-card p-4 position-relative">
                     <!-- Action Buttons -->
                     <div class="action-buttons">
-                        <form method="post" action="{{ path('app_admin_micro_credential_delete', {'id': microCredential.id}) }}" style="display: inline-block;" onsubmit="return confirm('Are you sure you want to delete this micro-credential?')">
-                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ microCredential.id) }}">
-                            <button type="submit" class="btn btn-outline-danger btn-icon" data-bs-toggle="tooltip" title="Delete">
+
+
+                            <button type="button" class="btn btn-outline-danger btn-icon" data-bs-toggle="modal" data-bs-target="#deleteModal{{ microCredential.id }}">
                                 <i class="bi bi-trash"></i>
                             </button>
-                        </form>
+
+                    </div>
+
+                    <!-- Delete Confirmation Modal for each micro-credential -->
+                    <div class="modal fade" id="deleteModal{{ microCredential.id }}" tabindex="-1" aria-labelledby="deleteModalLabel{{ microCredential.id }}" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel{{ microCredential.id }}">Confirm Delete</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete the micro-credential "{{ microCredential.name }}"?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                    <form method="post" action="{{ path('app_admin_micro_credential_delete', {'id': microCredential.id}) }}" style="display: inline-block;">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ microCredential.id) }}">
+                                        <button type="submit" class="btn btn-danger">Delete</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Page Title -->
