--- a/templates/admin/job_role/new.html.twig
+++ b/templates/admin/job_role/new.html.twig
@@ -95,21 +95,21 @@
                                     'label_attr': {'class': 'form-label fw-semibold'},
                                     'attr': {'class': 'form-control', 'rows': 4}
                                 }) }}
-                                <div class="form-text">Comprehensive overview of the job role and responsibilities</div>
+                                <div class="form-text">Comprehensive overview of the job role and responsibilities. HTML tags are supported.</div>
                             </div>
                             <div class="col-12 mb-3">
                                 {{ form_row(form.entryRequirements, {
                                     'label_attr': {'class': 'form-label fw-semibold'},
                                     'attr': {'class': 'form-control', 'rows': 3}
                                 }) }}
-                                <div class="form-text">Qualifications, experience, and skills needed to enter this role</div>
+                                <div class="form-text">Qualifications, experience, and skills needed to enter this role. HTML tags are supported.</div>
                             </div>
                             <div class="col-12 mb-3">
                                 {{ form_row(form.jobOpportunities, {
                                     'label_attr': {'class': 'form-label fw-semibold'},
                                     'attr': {'class': 'form-control', 'rows': 3}
                                 }) }}
-                                <div class="form-text">Career progression opportunities and employment outlook</div>
+                                <div class="form-text">Career progression opportunities and employment outlook. HTML tags are supported.</div>
                             </div>
                             <div class="col-12 mb-3">
                                 {{ form_row(form.jobOpportunitiesCaption, {
